# erebus

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  build.sh  install.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: build_dev_package.yaml  build_package.yaml  draft_pdf.yml  generate_schemas.py  generate_schemas.yml  package.yaml  publish_dev_artifact.yaml  publish_docs.yaml  publish_release.yaml  (+2 more)
connors_et_al_2025/: README.md  lp79118d_t0.csv  reformat_ttv_lookup.ipynb  run_all.py  trappist1b_t0.csv  trappist1c_t0.csv
dev/: 404.html  index.html  objects.inv
docs/: api.md  api_config.md  api_fnpca.md  api_results.md  api_run.md  contributing.md  copyright.md  index.md  installation.md  planet_config.md
joss/: paper.bib  paper.md
latest/: 404.html  index.html  objects.inv
manual_tests/: .gitignore  README.md  lhs1478b.yaml  lhs1478b_run.yaml  test.h5  test_aperture_photometry.ipynb  test_fitting.ipynb  test_fnpca.ipynb  test_pipeline_custom_fitting.ipynb  test_planet_yaml.ipynb  test_read_results.ipynb  test_run_pipeline.ipynb  test_serialization.ipynb  test_star_fitting.ipynb  test_subarray_2D.ipynb  test_ttv.ipynb  trappist1b.yaml
other/: lhs1478b.yaml  load from cache.ipynb  lp791-18d.ipynb
reanalysis_2025/: README.md  individual_fit.ipynb  joint_fit.ipynb  run_all.py
src/: aperture_photometry_utils.py  erebus.py  fits_file_utils.py  frame_normalized_pca.py  h5_serializable_file.py  individual_fit.py  individual_fit_results.py  individual_lightcurve_fit.py  joint_fit.py  joint_fit_results.py  mcmc_model.py  photometry_data.py  plotting.py  uncalints.py  utils.py  wrapped_fits.py
tests/: dynamic_method_creation.ipynb  jwst_pipeline_test.ipynb  lhs1478b_test.yaml  test.h5  test_aperture_photometry.ipynb  test_fitting.ipynb  test_fnpca.ipynb  test_outlier_rejection.ipynb  test_planet_yaml.ipynb  test_reading_fits_files.ipynb  test_run_pipeline.ipynb  test_serialization.ipynb  test_star_fitting.ipynb  test_subarray_2D.ipynb
(+260 files in other folders)
