[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erebus_exoplanet"
version = "0.8.0"
authors = [
  { name="Nicholas Connors", email="nicholas.connors@umontreal.ca" },
]
description = "An exoplanet eclipse depth tool"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]
license = "MIT"
license-files = ["LICENSE*"]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
"erebus" = ["**/*.ecf"]

[project.urls]
Homepage = "https://github.com/nicholasconnors/erebus"
Documentation = "https://nicholasconnors.github.io/erebus"
Issues = "https://github.com/nicholasconnors/erebus/issues"
